--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>HPXM2023</title>
 </head>
 
 <body>
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2">HPXM</span> <span class="year">2023</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            June 31, 2023 <br> Istituto Nazionale di Fisica Nucleare
         </div>
     </div>
 
