--- a/directions/index.html
+++ b/directions/index.html
@@ -15,12 +15,12 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+              Istituto Nazionale di Fisica Nucleare <br> TBD Summer 2023 @ Frascati, Italy
         </div>
     </div>
 
@@ -30,7 +30,7 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Conference" href="registration">Registration & Fee</a>
             </td>
             <td class="navigation">
                 <a title="Conference Program" href="program">Program</a> 
@@ -47,23 +47,26 @@
 
     <h2>Directions</h2>
     <p>
-        Here&rsquo;s where you can put directions to the conference,
-        and other information that will help attendees find the location,
-        and find the building, and register, and find local places they can stay, etc.
-        You can embed a <a href="https://www.google.com/maps">Google Maps</a> iframe
-        with directions to the conference like a did below.
-        It can also be helpful to include maps of the campus itself,
-        or pictures of the building the conference will be held in.
-        I&rsquo;ve opted to use a placeholder image of a kitten below.
+        The conference will take place at the INFN's Frascati National Laboratories, Via Enrico Fermi 54, 00044, Frascati, Italy
     </p>
+    <p> To reach the conference venue from Fiumicino International Airport (FCO): <a href="https://leonardo-express.com/en/en-leonardo-express-tickets/">take Leonardo Express</a> (30 min)train to Roma Termini then take <a href="https://www.trenitalia.com/en.html">a train</a> (30 min) to Tor Vergata FS</p>
+    <p> To reach the conference venue from Ciampino International Airport (CIA): <a href="https://www.atral-lazio.com/">use the ATRAL Bus</a>(10 min) to get to Ciampino FS Train station and from there take <a href="https://www.trenitalia.com/en.html">a train</a>(15 min) to Tor Vergata FS </p>
+    <p>Taxis are widely available at the Airports; expect 30-40 Euro from Ciampino and 60-80 Euro from Fiumicino</p>
+    <p>To get to/from Rome Anagnina Metro A station is possible to use <a href="https://servizi.cotralspa.it/orari">COTRAL Bus (link in italian)</a></p>
 
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134998.56138929052!2d-121.98776790326531!3d37.869213445646146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808ff431db2f96d1%3A0x8b99d90a20aa67de!2sMt+Diablo!5e0!3m2!1sen!2sus!4v1561787340910!5m2!1sen!2sus"></iframe>
+    <h3>The Laboratories</h3>
+    <p>Check this <a href="https://www.lnf.infn.it/lnfadmin/travel/mappa_lnf.pdf">map of the labs</a> to get around. Important places: Auditorium B. Touschek (36) and Canteen (30)</p>
 
-    <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
+    <!-- <iframe class="directions" src="https://www.google.com/maps/place/Laboratori+Nazionali+di+Frascati/@41.820633,12.6729102,15z/data=!4m5!3m4!1s0x0:0x6325cc3bb4f786d4!8m2!3d41.820633!4d12.6729102"></iframe> -->
+<div style="width: 100%"><iframe scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Via%20Enrico%20Fermi%2054%20Frascati+(LNF-INFN)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="600" frameborder="0"></iframe></div>
+
+    <!-- <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten"> -->
+
+    
 
     <footer>
         &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
     </footer>
 
 </body>
