--- a/registration/index.html
+++ b/registration/index.html
@@ -15,12 +15,12 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+              Istituto Nazionale di Fisica Nucleare <br> TBD Summer 2023 @ Frascati, Italy
         </div>
     </div>
 
@@ -30,7 +30,7 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Register for the Conference" href="registration">Registration & Fee</a>
             </td>
             <td class="navigation">
                 <a title="Conference Program" href="program">Program</a> 
@@ -47,21 +47,51 @@
     <br>
 
     <p>
-        Here&rsquo;s where you provide instructions how to register for your conference.
-        We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
-        and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
+        Registration can be done on the HPXM2023 indico website
+        <a href="https://agenda.infn.it/event/32647/registrations/">https://agenda.infn.it/event/32647/registrations/</a>
+
     </p>
+    <h2>Conference Fee</h2>
+
+
+
+<p>The fee must be paid in Euro (&euro;) to the Istituto Nazionale di Fisica Nucleare - Laboratori Nazionali di Frascati by bank transfer or credit card (and by &quot;storno&quot;, for INFN participants only).</p>
+
+<p><b> Participants: 100,00 &euro; (*)</b></p>
+
+<p> <b>Ph.D Students and young fellowships: 50,00 &euro; (*)</b></p>
+
+<p>(*) VAT included (22%). The fee covers the coffee breaks and the social dinner.   </p>
+
+<p><b>More info to follow</b></p>
+<font style="font-size:0px">
+
+<p><b>Method of payment (for non-INFN participants)</b></p>
+
+<p>CREDIT CARD Payments with credit card must be done through the following web form: <a href="http://www.lnf.infn.it/pos-online/pagamenti/">http://www.lnf.infn.it/pos-online/pagamenti/</a> (accepted cards: Visa and Mastercard; suggested browsers: Firefox and Internet Explorer).</p>
+
+<p>BANK TRANSFER TO:</p> <p> INFN - LNF Congressi e Foresterie Via E. Fermi, 40 - I00044 Frascati <br>IBAN: IT31 Q020 0839 1050 0010 2577 662 <br>code BIC-SWIFT: UNCRIT M 1385</p>
+
+<p>Please, in the reason for payment write: HPXM2018, registration of &quot;participant's name and family name&quot;</p>
+
+<p><b>Notes:</b></p>
+ <p>
+- since the bank transfer may take several days, a copy of the bank transfer receipt should be sent to the workshop secretary: alessandra.tamborrinoorsini@lnf.infn.it;</p> <p>- the bank transfer commission is at the sender's expense. Important Information</p>
+
+<p>Participants must specify in the registration form all the billing details, necessary to prepare a correct fee receipt or invoice; they are invited to check with their administration if the fee must be invoiced to the institute or if it can be invoiced to the participant name.</p>
+
+<p>Note: If the fee must be invoiced to the institute it is necessary to provide us with all the required information well in advance:<p> - Exact name of the Institute </p><p>- VAT/P.IVA in addition for Italian Institutes only:</p> <p>- C.U.U. (Codice Univoco Ufficio),</p> <p>- SPLIT Payment.</p> 
+<p><b>Storno INFN (INFN participants only)</b></p>
+
+<p>The registration fee of INFN participants will be paid through an internal transfer among INFN sites. Other forms of payment will not be accepted. Further information can be obtained from the local INFN administrative offices.</p>
+</font>    
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
-    <p>
-        Here&rsquo;s another paragraph of filler text:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p>
 
     <footer>
         &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
     </footer>
 
 </body>
