--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2">HPXM</span> <span class="year">2023</span>
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
         </div>
         <div class="bottom-right">
-            June 31, 2023 <br> Istituto Nazionale di Fisica Nucleare
+              Istituto Nazionale di Fisica Nucleare <br> TBD Summer 2023 @ Frascati, Italy
         </div>
     </div>
 
@@ -30,7 +30,7 @@
                 <a class="current" title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Conference" href="registration">Registration & Fee</a>
             </td>
             <td class="navigation">
                 <a title="Conference Program" href="program">Program</a> 
@@ -44,56 +44,54 @@
         </tr>
     </table>
 
-    <h2>What is This Website?</h2>
+    <h3>Outline</h3>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+        High Precision X-ray Measurements 2023 conference is the third edition of the HPXM workshop, held at the INFN Laboratories of Frascati in 2018 and 2021.
     </p>
     <p>
-        You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
-        This template was created from a website I made for 
-        <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
-        in case you want to see an example of this template being used in the wild.
-    </p>
-    <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+        In the wake of the success of the 2018 and 2021 editions, HPXM2023 is planned with the twofold aim to consolidate the existing interconnections between the research teams and foster creating new ones, offering the opportunity for all the participants to discuss and share the results of their activities focusing on a common protagonist: X-ray precision detection.
     </p>
 
-    <h2>Organizers</h2>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
+        The aim of this workshop is to inform the participants on the most recent developments in X-ray detection technologies and their possible impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
     </p>
+
+    <p>
+        Ray tracing simulations, graphite mosaic crystals and their applications will have a special focus.
+    </p>
+
+    <p>
+        The scientific program consists of invited lectures from distinguished scientists and oral presentations given by the participants; a technical and industrial session is also foreseen.
+    </p>
+   
+
+    <h2>Local Organizing Committee (LOC)</h2>
+    <p>
+        Dr. Alessandro Scordo <br> 
+        Dr. Fabrizio Napolitano
+    </p>
+
+
+    <h2>Scientific Committee</h2>
+    <p>
+
+    </p>
+
+    <h2>Sponsors</h2>
+
     <table class="sponsors">
         <tr>
+
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
-                </a>
+                <img src="assets/mdpi_logo.png" alt="Second Sponsor Name" style="width: 50%">
             </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten2.jpg" alt="Second Sponsor Name" style="width: 80%">
-                </a>
-            </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
-                </a>
-            </td>
+    
         </tr>
     </table>
 
     <footer>
         &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
     </footer>
 
 </body>
