--- a/flyer/index.html
+++ b/flyer/index.html
@@ -43,9 +43,9 @@
             </td>
         </tr>
     </table>
-
- 
-
+<p>
+ <img src="assets/qrcode_hpxm23.jpg">
+</p>
     <footer>
         &copy; Conference Organizers
         <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
