--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
         </div>
         <div class="bottom-right">
-              Istituto Nazionale di Fisica Nucleare <br> TBD Summer 2023 @ Frascati, Italy
+              Istituto Nazionale di Fisica Nucleare <br> 19-23 June 2023 @ Frascati, Italy
         </div>
     </div>
 
@@ -43,38 +43,72 @@
             </td>
         </tr>
     </table>
+    <img src="assets/Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg" style="width: 400px;float: left;margin: 20px" >
 
-    <h3>Outline</h3>
     <p>
-        High Precision X-ray Measurements 2023 conference is the third edition of the HPXM workshop, held at the INFN Laboratories of Frascati in 2018 and 2021.
+        High Precision X-ray Measurements 2023 conference is the third edition of the HPXM conference, held at the INFN Laboratories of Frascati in 2018 and 2021.
     </p>
     <p>
         In the wake of the success of the 2018 and 2021 editions, HPXM2023 is planned with the twofold aim to consolidate the existing interconnections between the research teams and foster creating new ones, offering the opportunity for all the participants to discuss and share the results of their activities focusing on a common protagonist: X-ray precision detection.
     </p>
 
     <p>
-        The aim of this workshop is to inform the participants on the most recent developments in X-ray detection technologies and their possible impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
-    </p>
-
-    <p>
-        Ray tracing simulations, graphite mosaic crystals and their applications will have a special focus.
+        The aim of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their possible impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
     </p>
 
     <p>
         The scientific program consists of invited lectures from distinguished scientists and oral presentations given by the participants; a technical and industrial session is also foreseen.
     </p>
-   
-
-    <h2>Local Organizing Committee (LOC)</h2>
     <p>
-        Dr. Alessandro Scordo <br> 
-        Dr. Fabrizio Napolitano
+    Main Topics of the conference will be: X-ray energy and position detectors, optics, imaging and tracing simulations, as well as their application in biology, astrophysics, nuclear physics, exotic atoms, medical physics and agrifood; spectrometers, graphite-based applications and chemical analysis.
+    </p>    
+    <p>
+    Best Young Researchers presentation award:
+
+    A best presentation contest will take place to honor the most inspiring talks presented by Ph.D students during the conference. Winners, elected by a commission to be selected among the conference participants, will be awarded prizes provided by the MDPI sponsor.
     </p>
+    <p>    The conference is financially supported by:</p>
+    <ul style="list-style-type:disc; color: black">
+        <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
+        <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
+        <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
+        <li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
+        <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
+        <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
+    </ul>
+    <p>These sponsors will participate both with an oral presentation and a demonstrated stand for the entire duration of the event.</p>
+    <p>
+    <i> The conference is under the patronage of the "Italian Synchrotron Radiation Society" (SILS)</i>
+    </p>
+    <p>Daily Opening Lectures by Dr. Busch Uwe (Deutsches Röntgen Museum)</p>
+    <h2>Conference Chairs</h2>
+    <p>
+        Alessandro Scordo (Laboratori Nazionali di Frascati INFN, IT)<br> 
+        Fabrizio Napolitano (Laboratori Nazionali di Frascati INFN, IT)<br>
+    </p>
+
 
 
     <h2>Scientific Committee</h2>
     <p>
+        Antonella Balerna (Laboratori Nazionali di Frascati INFN, IT)<br>
+        David Bleiner (Swiss Federal Institute of Materials Science & Technology (Empa), CH) <br>
+        Roberto Bedogni (Laboratori Nazionali di Frascati, INFN, IT)<br>
+        Massimo Ferrario (Laboratori Nazionali di Frascati, INFN, IT)<br>
+        Sultan Dabagov (Laboratori Nazionali di Frascati, INFN, IT)<br>
+        Anna Bergamaschi (Paul Scherrer Institute, CH) <br>
+        Leonardo Abbene (Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)<br>
+        Antonino Buttacavoli (Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)<br>
+        Carlo Fiorini (Politecnico di Milano and INFN, IT)<br>
+        Andrea Zappettini (Director of IMEM-CNR, IT) <br>
+    </p>
 
+    <h2>Local Organizing Committee (LOC)</h2>
+    <p>
+        Simone Manti <br>
+        Marco Miliucci <br>
+        Luca de Paolis <br>
+        Francesco Sgaramella <br>
     </p>
 
     <h2>Sponsors</h2>
@@ -83,9 +117,28 @@
         <tr>
 
             <td class="sponsor">
-                <img src="assets/mdpi_logo.png" alt="Second Sponsor Name" style="width: 50%">
+                <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%">
             </td>
-    
+            <td class="sponsor" >
+                <img src="assets/logo-tesfluid-300.png">
+            </td>
+            <td class="sponsor" >
+                <img src="assets/logo_optigraf.gif" style="background: black">
+            </td>
+            <td class="sponsor" >
+                <img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px">
+            </td>
+        </tr>
+        <tr>
+            <td class="sponsor" >
+                <img src="assets/unipa_default.jpg">
+            </td>
+            <td class="sponsor" >
+                <img src="assets/logo-2-caen.png" style="background: red">
+            </td>
+            <td class="sponsor" >
+                <img src="assets/cropped-logo_SILS-180x82.png">
+            </td>
         </tr>
     </table>
 
@@ -93,6 +146,7 @@
         &copy; Conference Organizers
         <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
     </footer>
+    <h2></h2>
 
 </body>
 </html>
