--- a/program/index.html
+++ b/program/index.html
@@ -23,7 +23,7 @@
             <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
         </div>
         <div class="bottom-right">
-              Istituto Nazionale di Fisica Nucleare <br> TBD Summer 2023 @ Frascati, Italy
+              Istituto Nazionale di Fisica Nucleare <br> 19-23 June 2023 @ Frascati, Italy
         </div>
     </div>
 
