--- a/program/index.html
+++ b/program/index.html
@@ -48,9 +48,11 @@
     </table>
 
     <h2>Conference Program</h2>
-    The program is available on the conference website
+    <p>The program is available on the conference website
         <a href="https://agenda.infn.it/event/32647/">https://agenda.infn.it/event/32647//</a>
+    </p>
     <iframe class="programme" src="https://agenda.infn.it/event/32647/timetable/?view=standard"></iframe>
+
 <!-- 
     <table class="plenary">
         <tr>
