fix somehting more

--- a/directions/index.html
+++ b/directions/index.html
@@ -17,7 +17,8 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
+            <!-- <span class="year">HPXM2023</span> -->
         </div>
         <div class="bottom-right">
               Istituto Nazionale di Fisica Nucleare <br> 19-23 June 2023 @ Frascati, Italy
