--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> <span class="year">HPXM2023</span>
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
+             <!-- <span class="year">HPXM2023</span> -->
         </div>
         <div class="bottom-right">
               Istituto Nazionale di Fisica Nucleare <br> 19-23 June 2023 @ Frascati, Italy
@@ -53,7 +54,7 @@
     </p>
 
     <p>
-        The aim of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their possible impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
+        The aim of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
     </p>
 
     <p>
@@ -68,6 +69,7 @@
     A best presentation contest will take place to honor the most inspiring talks presented by Ph.D students during the conference. Winners, elected by a commission to be selected among the conference participants, will be awarded prizes provided by the MDPI sponsor.
     </p>
     <p>    The conference is financially supported by:</p>
+    <p>
     <ul style="list-style-type:disc; color: black">
         <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
         <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
@@ -76,6 +78,7 @@
         <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
         <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
     </ul>
+    </p>
     <p>These sponsors will participate both with an oral presentation and a demonstrated stand for the entire duration of the event.</p>
     <p>
     <i> The conference is under the patronage of the "Italian Synchrotron Radiation Society" (SILS)</i>
