--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
             </td>
         </tr>
     </table>
+    <figure style="float: left;margin: 20px">
     <img src="assets/Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg" style="width: 400px;float: left;margin: 20px" >
-
+    <figcaption style="text-align: center"><a href="https://commons.wikimedia.org/wiki/File:Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg">From Wikimedia</a></figcaption>
+    </figure>
     <p>
         High Precision X-ray Measurements 2023 conference is the third edition of the HPXM conference, held at the INFN Laboratories of Frascati in 2018 and 2021.
     </p>
