updated LOC and SOC

--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@
 
     <h2>Scientific Committee</h2>
     <p>
-        Antonella Balerna (Laboratori Nazionali di Frascati INFN, IT)<br>
-        David Bleiner (Swiss Federal Institute of Materials Science & Technology (Empa), CH) <br>
-        Roberto Bedogni (Laboratori Nazionali di Frascati, INFN, IT)<br>
-        Massimo Ferrario (Laboratori Nazionali di Frascati, INFN, IT)<br>
-        Sultan Dabagov (Laboratori Nazionali di Frascati, INFN, IT)<br>
-        Anna Bergamaschi (Paul Scherrer Institute, CH) <br>
         Leonardo Abbene (Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)<br>
+        Antonella Balerna (Laboratori Nazionali di Frascati INFN, IT)<br>
+        Roberto Bedogni (Laboratori Nazionali di Frascati, INFN, IT)<br>
+        Anna Bergamaschi (Paul Scherrer Institute, CH) <br>
+        David Bleiner (Swiss Federal Institute of Materials Science & Technology (Empa), CH) <br>
         Antonino Buttacavoli (Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)<br>
+        Sultan Dabagov (Laboratori Nazionali di Frascati, INFN, IT)<br>
+        Massimo Ferrario (Laboratori Nazionali di Frascati, INFN, IT)<br>
         Carlo Fiorini (Politecnico di Milano and INFN, IT)<br>
+	Michael Lerch (Center for Medical Radiation Physics, University of Wollongong, AU) <br>
         Andrea Zappettini (Director of IMEM-CNR, IT) <br>
     </p>
 
