added advanced ML ...

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </p>
 
     <p>
-        The aim of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
+        The aim of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, XRF, XES, EXAFS, PIXE, plasma emission spectroscopy, monochromators, synchrotron radiation, advanced statistical and machine learnign methods, radioprotection, telescopes and space engineering, medical applications, food and beverage quality control and elemental mapping.
     </p>
 
     <p>
