--- a/registration/index.html
+++ b/registration/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <table class="navigation">
+        <table class="navigation">
         <tr>
             <td class="navigation">
                 <a title="Conference Home Page" href=".">Home</a>
@@ -40,7 +40,19 @@
                 <a title="Directions to the Conference" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Accommodation" href="accomodation">Accommodation</a>
+            </td>
+        </tr>
+    </table>
+    <table class="navigation">
+    
+        <tr>     
+            <td class="navigation">
+                <a title="Sponsors" href="sponsors">Sponsors</a>
+            </td>
+
+            <td class="navigation">
+                <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
             </td>
         </tr>
     </table>
