--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -5,16 +5,13 @@
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <script type="text/javascript" async
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=default">
-    </script>
     <meta name="description" content="Conference Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <title>Accomodation | Conference Template</title>
 </head>
-
+    
 <body>
 
     <div class="banner">
@@ -28,7 +25,7 @@
         </div>
     </div>
 
-        <table class="navigation">
+       <table class="navigation">
         <tr>
             <td class="navigation">
                 <a title="Conference Home Page" href=".">Home</a>
@@ -37,7 +34,7 @@
                 <a title="Register for the Conference" href="registration">Registration & Fee</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a title="Conference Program" href="program">Program</a> 
             </td>
             <td class="navigation">
                 <a title="Directions to the Conference" href="directions">Directions</a>
@@ -55,38 +52,37 @@
             </td>
 
             <td class="navigation">
-                <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
+                <a class="current" title="SOC&LOC" href="socandloc">SOC&LOC</a>
             </td>
         </tr>
     </table>
-
-    <h2>Conference Program</h2>
-    <p>The program is available on the conference website
-        <a href="https://agenda.infn.it/event/32647/">https://agenda.infn.it/event/32647//</a>
+<!-- <p>
+ <img src="assets/qrcode_hpxm23.jpg">
+</p>
+ -->
+<h2>Scientific Organizing Committee (SOC) </h2>
+    <p>
+        Leonardo Abbene <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT</i>)<br>
+        Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
+        Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
+        Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br>
+        David Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
+        Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br>
+        Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
+        Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
+        Carlo Fiorini <i>(Politecnico di Milano and INFN, IT)</i><br>
+    Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
+        Andrea Zappettini <i>(Director of IMEM-CNR, IT)</i> <br>
     </p>
-    <iframe class="programme" src="https://agenda.infn.it/event/32647/timetable/?view=standard"></iframe>
 
-<!-- 
-    <table class="plenary">
-        <tr>
-            <td class="date" rowspan="3">
-                4:00pm
-            </td>
-            <td class="title">
-                This is Another Plenary Talk!
-            </td>
-        </tr>
-        <tr>
-            <td class="speaker">
-                Plenary Speaker
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-            </td>
-        </tr>
-    </table> -->
+<h2>Local Organizing Committee (LOC)</h2>
+    <p>
+        Simone Manti <br>
+        Marco Miliucci <br>
+        Luca de Paolis <br>
+        Francesco Sgaramella <br>
+    </p>
+
 
     <footer>
         &copy; Conference Organizers
