--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -5,16 +5,13 @@
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <script type="text/javascript" async
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=default">
-    </script>
     <meta name="description" content="Conference Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <title>Accomodation | Conference Template</title>
 </head>
-
+    
 <body>
 
     <div class="banner">
@@ -37,7 +34,7 @@
                 <a title="Register for the Conference" href="registration">Registration & Fee</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a title="Conference Program" href="program">Program</a> 
             </td>
             <td class="navigation">
                 <a title="Directions to the Conference" href="directions">Directions</a>
@@ -51,7 +48,7 @@
     
         <tr>     
             <td class="navigation">
-                <a title="Sponsors" href="sponsors">Sponsors</a>
+                <a class="current"  title="Sponsors" href="sponsors">Sponsors</a>
             </td>
 
             <td class="navigation">
@@ -59,34 +56,56 @@
             </td>
         </tr>
     </table>
+<!-- <p>
+ <img src="assets/qrcode_hpxm23.jpg">
+</p>
+ -->
+ <h2>Sponsors</h2>
 
-    <h2>Conference Program</h2>
-    <p>The program is available on the conference website
-        <a href="https://agenda.infn.it/event/32647/">https://agenda.infn.it/event/32647//</a>
+<p>    The conference is financially supported by:</p>
+    <p>
+    <ul style="list-style-type:disc; color: black">
+        <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
+        <li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
+        <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
+        <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
+        <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li>
+        <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
+        <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
+    </ul>
     </p>
-    <iframe class="programme" src="https://agenda.infn.it/event/32647/timetable/?view=standard"></iframe>
 
-<!-- 
-    <table class="plenary">
+
+    <table class="sponsors">
         <tr>
-            <td class="date" rowspan="3">
-                4:00pm
+            <td class="sponsor" >
+                <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
-            <td class="title">
-                This is Another Plenary Talk!
+            <td class="sponsor" >
+                <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
             </td>
+            <td class="sponsor">
+               <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a>
+            </td>
+            <td class="sponsor" >
+                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black"></a>
+            </td>
+
         </tr>
         <tr>
-            <td class="speaker">
-                Plenary Speaker
+
+            <td class="sponsor" >
+                <a href="https://www.lucedisincrotrone.it/en/homepage/"><img src="assets/cropped-logo_SILS-180x82.png"></a>
             </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+            <td class="sponsor" >
+                <a href="https://www.tesfluid.com/"><img src="assets/logo-tesfluid-300.png"></a>
             </td>
+            <td class="sponsor" >
+                <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg"></a>
+            </td>
+
         </tr>
-    </table> -->
+    </table>
 
     <footer>
         &copy; Conference Organizers
