--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <!-- <span class="year">HPXM2023</span> -->
         </div>
         <div class="bottom-right">
-              Istituto Nazionale di Fisica Nucleare <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
         </div>
     </div>
 
