--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -70,6 +70,7 @@
 <p>For the application of special rates reserved to the workshop quote "Mid-Term LNF" in your reservation. Rates are per night, per room and inclusive of breakfast and VAT, excluding € 2 per day for city tax.</p>
 
 
+<p><b>Hotel rates will be determined soon</b></p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -93,14 +94,14 @@
     <td class="tg-c3ow"></td>
   </tr>
   <tr>
-    <td class="tg-c3ow">Hotel Cacciani ***<br>Via A. Diaz, 15 - Frascati<br>Tel. +39-06-9401 991<br>Fax +39-06-9420 440<br>e-mail: <a href="mailto:hotel@cacciani.it" target="_blank" rel="noopener noreferrer">hotel@cacciani.it</a><br></td>
-    <td class="tg-c3ow"><br><br><br>75 EUR</td>
-    <td class="tg-c3ow"><br><br><br>95 EUR</td>
+    <td class="tg-c3ow"><a href="http://www.cacciani.it/hotel/">Hotel Cacciani</a> ***<br>Via A. Diaz, 15 - Frascati<br>Tel. +39-06-9401 991<br>Fax +39-06-9420 440<br>e-mail: <a href="mailto:hotel@cacciani.it" target="_blank" rel="noopener noreferrer">hotel@cacciani.it</a><br></td>
+    <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
+    <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
   </tr>
   <tr>
     <td class="tg-c3ow"><a href="http://www.villamercede.com/" target="_blank" rel="noopener noreferrer">Hotel Villa Mercede</a> ****<br>Via Tuscolana, 20 - Frascati<br>Tel. +39-06-942 4760<br>Fax +39-06-941 6461<br>e-mail: <a href="mailto:mail@villamercede.com" target="_blank" rel="noopener noreferrer">mail@villamercede.com</a><br></td>
-    <td class="tg-c3ow"><br><br><br>85 EUR</td>
-    <td class="tg-c3ow"><br><br><br>115 EUR</td>
+    <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
+    <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
   </tr>
 </tbody>
 </table>
