--- a/registration/index.html
+++ b/registration/index.html
@@ -70,9 +70,11 @@
 
 <p>The fee must be paid in Euro (&euro;) to the Istituto Nazionale di Fisica Nucleare - Laboratori Nazionali di Frascati by bank transfer or credit card (and by &quot;storno&quot;, for INFN participants only).</p>
 
-<p><b> Participants: 100,00 &euro; (*)</b></p>
+<!-- <p><b> Participants: 100,00 &euro; (*)</b></p> -->
+<p><b> Participants: TBA &euro; (*)</b></p>
 
-<p> <b>Ph.D Students and young fellowships: 50,00 &euro; (*)</b></p>
+<!-- <p> <b>Ph.D Students and young fellowships: 50,00 &euro; (*)</b></p> -->
+<p> <b>Ph.D Students and young fellowships: TBA &euro; (*)</b></p>
 
 <p>(*) VAT included (22%). The fee covers the coffee breaks and the social dinner.   </p>
 
