new logo sponsor strong

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -70,6 +70,7 @@
         <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
         <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
         <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li>
+	<li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li>
         <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
         <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
     </ul>
@@ -98,12 +99,14 @@
                 <a href="https://www.lucedisincrotrone.it/en/homepage/"><img src="assets/cropped-logo_SILS-180x82.png"></a>
             </td>
             <td class="sponsor" >
+                <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png"></a>
+            </td>
+            <td class="sponsor" >
                 <a href="https://www.tesfluid.com/"><img src="assets/logo-tesfluid-300.png"></a>
             </td>
             <td class="sponsor" >
                 <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg"></a>
             </td>
-
         </tr>
     </table>
 
