--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -89,7 +89,7 @@
                <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a>
             </td>
             <td class="sponsor" >
-                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black"></a>
+                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:3000%"></a>
             </td>
 
         </tr>
@@ -99,13 +99,13 @@
                 <a href="https://www.lucedisincrotrone.it/en/homepage/"><img src="assets/cropped-logo_SILS-180x82.png"></a>
             </td>
             <td class="sponsor" >
-                <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png"></a>
+                <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png" style="background: black"></a>
             </td>
             <td class="sponsor" >
                 <a href="https://www.tesfluid.com/"><img src="assets/logo-tesfluid-300.png"></a>
             </td>
             <td class="sponsor" >
-                <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg"></a>
+                <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg" style=" width:3000%"></a>
             </td>
         </tr>
     </table>
