added dectris sponsor

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -66,7 +66,8 @@
     <p>
     <ul style="list-style-type:disc; color: black">
         <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
-        <li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
+        <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li>
+	<li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
         <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
         <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
         <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li>
@@ -83,21 +84,25 @@
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
             <td class="sponsor" >
-                <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
-            </td>
-            <td class="sponsor">
-               <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a>
+                <a href="https://www.dectris.com"><img src="assets/DectrisLogo.png" style=" width:100%"></a>
             </td>
             <td class="sponsor" >
-                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:3000%"></a>
+                <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
             </td>
 
         </tr>
         <tr>
-
+            <td class="sponsor">
+               <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a>
+            </td>
+            <td class="sponsor" >
+                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
+            </td>
             <td class="sponsor" >
                 <a href="https://www.lucedisincrotrone.it/en/homepage/"><img src="assets/cropped-logo_SILS-180x82.png"></a>
             </td>
+        </tr>
+        <tr>
             <td class="sponsor" >
                 <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png" style="background: black"></a>
             </td>
@@ -105,7 +110,7 @@
                 <a href="https://www.tesfluid.com/"><img src="assets/logo-tesfluid-300.png"></a>
             </td>
             <td class="sponsor" >
-                <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg" style=" width:3000%"></a>
+                <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg" style=" width:100%"></a>
             </td>
         </tr>
     </table>
