--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <p><i>Daily Opening Lectures by Dr. Busch Uwe (Deutsches Röntgen Museum)</i>.</p>
 
     <p>
-        The <b>scientific goal</b> of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, nuclear physics, exotic atoms, medical physics, biology and agrifood.
+        The <b>scientific goal</b> of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, exotic atoms, medical physics, biology and agrifood.
     </p>
  
     <p>
