fixes, new indico agenda

--- a/program/index.html
+++ b/program/index.html
@@ -62,9 +62,9 @@
 
     <h2>Conference Program</h2>
     <p>The program is available on the conference website
-        <a href="https://agenda.infn.it/event/32647/">https://agenda.infn.it/event/32647//</a>
+        <a href="https://agenda.infn.it/event/34523/">https://agenda.infn.it/event/34523/</a>
     </p>
-    <iframe class="programme" src="https://agenda.infn.it/event/32647/timetable/?view=standard"></iframe>
+    <iframe class="programme" src="https://agenda.infn.it/event/34523/timetable/?view=standard"></iframe>
 
 <!-- 
     <table class="plenary">
