--- a/registration/index.html
+++ b/registration/index.html
@@ -61,7 +61,7 @@
 
     <p>
         Registration can be done on the HPXM2023 indico website
-        <a href="https://agenda.infn.it/event/32647/registrations/">https://agenda.infn.it/event/32647/registrations/</a>
+        <a href="https://agenda.infn.it/event/34523/">https://agenda.infn.it/event/34523/</a>
 
     </p>
     <h2>Conference Fee</h2>
