--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -66,7 +66,7 @@
         Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
         Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
         Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br>
-        David Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
+        Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
         Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br>
         Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
         Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
